--- a/index.html
+++ b/index.html
@@ -2,96 +2,112 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vers Shoes Store</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f8f8f8;
-      color: #333;
-    }
-    header {
-      background-color: #111;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
-    }
-    nav {
-      background-color: #222;
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      padding: 10px 0;
-    }
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    .hero {
-      background: url('https://images.unsplash.com/photo-1528701800484-027c8eaccf0f?auto=format&fit=crop&w=1400&q=80') no-repeat center center/cover;
-      height: 400px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      text-shadow: 1px 1px 5px #000;
-      font-size: 2.5rem;
-      font-weight: bold;
-    }
-    .products {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      padding: 40px;
-    }
-    .product {
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      text-align: center;
-    }
-    .product img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 10px;
-    }
-    .product h3 {
-      margin: 10px 0;
-    }
-    .product p {
-      color: #666;
-    }
-    .product button {
-      background-color: #111;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      margin-top: 10px;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .product button:hover {
-      background-color: #444;
-    }
-    footer {
-      background-color: #111;
-      color: white;
-      text-align: center;
-      padding: 20px;
-      margin-top: 40px;
-    }
-  </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vers. Store</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<style>
+  body {
+    margin: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #ffffff; /* white background */
+    color: #222; /* default text color */
+  }
+
+  header {
+    background-color: #d10000; /* strong red */
+    color: #ffffff; /* white text */
+    padding: 30px 20px;
+    text-align: center;
+    font-size: 32px;
+    font-weight: bold;
+    letter-spacing: 1px;
+  }
+
+  .subheading {
+    font-size: 18px;
+    margin-top: 5px;
+    color: #ffcccc;
+  }
+  
+  nav {
+    background-color: #d10000; /* red nav bar */
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    padding: 15px 0;
+  }
+
+  nav a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 500;
+    transition: all 0.3s ease;
+  }
+
+  nav a:hover {
+    text-decoration: underline;
+    opacity: 0.8;
+  }
+
+  .main-banner {
+    text-align: center;
+    padding: 50px 20px;
+    background-color: #f9f9f9;
+    font-size: 24px;
+    color: #444;
+  }
+
+  .product {
+    text-align: center;
+    margin: 40px;
+  }
+
+  .product img {
+    width: 300px;
+    border-radius: 12px;
+  }
+
+  .product-name {
+    font-size: 20px;
+    margin-top: 10px;
+    color: #d10000; /* red product title */
+  }
+
+  footer {
+    text-align: center;
+    padding: 20px;
+    background-color: #f0f0f0;
+    color: #555;
+  }
+
+  footer {
+  background-color: #d10000; /* red background */
+  color: white;
+  text-align: center;
+  padding: 20px 0;
+  font-size: 16px;
+}
+
+footer .social {
+  color: white;
+  text-decoration: none;
+  margin: 0 10px;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+footer .social:hover {
+  text-decoration: underline;
+  color: #ffcccc; /* lighter red on hover */
+}
+</style>
 </head>
 <body>
   <header>
-    <h1>Vers Shoes Store</h1>
-    <p>Step into Style</p>
+    <h1>Vers.</h1>
+    <p>make your style from vers.</p>
+    <p class="subheading">contact us: +91 9497713316</p>
   </header>
   <nav>
     <a href="#">Home</a>
@@ -99,31 +115,87 @@
     <a href="#">About</a>
     <a href="#">Contact</a>
   </nav>
-  <div class="hero">
-    Discover Your Perfect Pair
-  </div>
   <section class="products">
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1600185365917-683f60b2c4ae?auto=format&fit=crop&w=800&q=80" alt="Sneaker 1">
-      <h3>Classic Sneakers</h3>
-      <p>$79.99</p>
-      <button>Add to Cart</button>
-    </div>
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1618220049936-cb3f7ee30274?auto=format&fit=crop&w=800&q=80" alt="Sneaker 2">
-      <h3>Modern Runners</h3>
-      <p>$89.99</p>
-      <button>Add to Cart</button>
-    </div>
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1618354691315-076e7b9bb56d?auto=format&fit=crop&w=800&q=80" alt="Sneaker 3">
-      <h3>Streetwear Style</h3>
-      <p>$99.99</p>
-      <button>Add to Cart</button>
+  <h2>Our Shoes</h2>
+  
+  <div class="product">
+    <img src="css/image/puma.jpg" alt="Puma Shoes" width="250">
+    <h3>Puma Sneakers</h3>
+    <p>₹3 ,199</p>
+  </div>
+
+  <div class="product">
+    <img src="css/images/shoes.jpeg" alt="air jordan" width="250">
+    <h3>Classic Runners</h3>
+    <p>₹3,499</p>
+  </div>
+
+  <div class="product">
+    <img src="cssimages/shoes.webp" alt="air jordan"250">
+    <h3>Streetwear Style</h3>
+    <p>₹2,999</p>
+  </div>
+
+  <div class="product">
+    <image src="css-=image/air-force-1.jpg." alt="air force" width="250"
+    <h3>air force</h3>
+    <p>₹2,199</p>
+  </div>
+  
+  <div class="product">
+    <img src="css-image/jordan-blue.jpg." alt="nike air jordan 1" width="250">
+    <h3>nike air jordan</h3>
+    <p>₹2799</p>
+  </div>
+
+  <div class="product">
+    <img src="css-image/jordan-gold.jpg.jpg" alt="nike air jordan" width="250">
+    <h3>nike air jordan</h3>
+    <p>₹2,799</p>
+  </div>
+
+  <div class="product">
+    <img src="css-image/jordan-violet.jpg.jpg" alt="nike air jordan" width="250">
+    <h3>nike air jordan</h3>
+    <p>₹2,700</p>
+  </div>
+  
+  <div class="product">
+    <img src="css-image/new-balance-346.jpg.jpg" width="250">
+    <h3>new balance</h3>
+    <p>₹3000</p>
+  </div>
+
+  <div class="product">
+    <img src="css-image/new-balance-white.jpg.jpg" alt="new balance" width="250">
+    <h3>new balance</h3>
+    <p>₹3,200</p>
+  </div>
+
+  <div class="product">
+    <img src="css-image/puma-blue-349.jpg.jpg" alt="puma" width="250">
+    <h3>puma</h3>
+    <p>₹2,699</p>
+  </div> 
+
+  <div class="product">
+    <img src="css-image/tiger-siler.jpg.jpg" alt="tiger" width="250">
+    <h3>tiger</h3>
+    <p>₹2,699</p>
+  </div>
+</section>
     </div>
   </section>
   <footer>
-    <p>&copy; 2025 Vers Shoes Store. All rights reserved.</p>
+    <p>Connect with us:</p>
+    <a href="https://wa.me/919497713316" target="_blank">
+      <i class="fab fa-whatsapp"></i> WhatsApp
+    </a>
+    |
+    <a href="https://instagram.com/vers.shoestore" target="_blank">
+      <i class="fab fa-instagram"></i> Instagram
+    </a>
   </footer>
 </body>
 </html>
+
