--- a/index.html
+++ b/index.html
@@ -186,6 +186,13 @@ footer .social:hover {
 </section>
     </div>
   </section>
+  <section id="about" class="about">
+    <h2>About us</h2>
+    <p>
+      welcome to<strong>vers.store</strong>- your destination for premium sneakers and stylish footwear.
+      we bring yiu best brands at affordable prices to help you make your style statement.
+    </p>
+  </section>
   <footer>
     <p>Connect with us:</p>
     <a href="https://wa.me/919497713316" target="_blank">
@@ -198,4 +205,5 @@ footer .social:hover {
   </footer>
 </body>
 </html>
+
 
