--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ footer .social:hover {
   </div>
 
   <div class="product">
-    <img src="css/images/shoes.jpeg" alt="air jordan" width="250">
+    <img src="css/images/shoes.jpg" alt="air jordan" width="250">
     <h3>Classic Runners</h3>
     <p>₹3,499</p>
   </div>
@@ -205,5 +205,6 @@ footer .social:hover {
   </footer>
 </body>
 </html>
+
 
 
