--- a/index.html
+++ b/index.html
@@ -119,79 +119,74 @@ footer .social:hover {
   <h2>Our Shoes</h2>
   
   <div class="product">
-    <img src="css/image/puma.jpg" alt="Puma Shoes" width="250">
+    <img src="css image/puma.jpg"
+    alt="Puma Shoes" width="250">
     <h3>Puma Sneakers</h3>
     <p>₹3 ,199</p>
   </div>
 
   <div class="product">
-    <img src="css/images/shoes.jpg" alt="air jordan" width="250">
+    <img src="css image/shoes.jpeg"
+    alt="air jordan" width="250">
     <h3>Classic Runners</h3>
     <p>₹3,499</p>
   </div>
 
   <div class="product">
-    <img src="cssimages/shoes.webp" alt="air jordan"250">
+    <img src="css image/shoes.jpeg" alt="air jordan" width="250">
     <h3>Streetwear Style</h3>
     <p>₹2,999</p>
   </div>
 
   <div class="product">
-    <image src="css=image/air-force-1.jpg"
-    <h3>air force</h3>
+    <image src="css image/air-force-1.jpg" alt="air force" width="250"
+    <h3>AIR force</h3>
     <p>₹2,199</p>
   </div>
   
   <div class="product">
-    <img src="css-image/jordan-blue.jpg." alt="nike air jordan 1" width="250">
+    <img src="css image/joordan-blue.jpg" alt="nike air jordan 1" width="250">
     <h3>nike air jordan</h3>
     <p>₹2799</p>
   </div>
 
   <div class="product">
-    <img src="css-image/jordan-gold.jpg.jpg" alt="nike air jordan" width="250">
+    <img src="css image/jordan-gold.jpg" alt="nike air jordan" width="250">
     <h3>nike air jordan</h3>
     <p>₹2,799</p>
   </div>
 
   <div class="product">
-    <img src="css-image/jordan-violet.jpg.jpg" alt="nike air jordan" width="250">
+    <img src="css image/jordan-violet.jpg" alt="nike air jordan" width="250">
     <h3>nike air jordan</h3>
     <p>₹2,700</p>
   </div>
   
   <div class="product">
-    <img src="css-image/new-balance-346.jpg.jpg" width="250">
+    <img src="css image/ne-balance-346.jpg" alt="new-balance" width="250">
     <h3>new balance</h3>
     <p>₹3000</p>
   </div>
 
   <div class="product">
-    <img src="css-image/new-balance-white.jpg.jpg" alt="new balance" width="250">
+    <img src="css image/new-balance.jpg" alt="new balance" width="250">
     <h3>new balance</h3>
     <p>₹3,200</p>
   </div>
 
   <div class="product">
-    <img src="css-image/puma-blue-349.jpg.jpg" alt="puma" width="250">
+    <img src="css image/puma-blue-349.jpg" alt="puma" width="250">
     <h3>puma</h3>
     <p>₹2,699</p>
   </div> 
 
   <div class="product">
-    <img src="css-image/tiger-siler.jpg.jpg" alt="tiger" width="250">
+    <img src="css image/tiger-silver.jpg" alt="tiger" width="250">
     <h3>tiger</h3>
-    <p>₹2,699</p>
+    <p>₹2,690</p>
   </div>
 </section>
     </div>
-  </section>
-  <section id="about" class="about">
-    <h2>About us</h2>
-    <p>
-      welcome to<strong>vers.store</strong>- your destination for premium sneakers and stylish footwear.
-      we bring yiu best brands at affordable prices to help you make your style statement.
-    </p>
   </section>
   <footer>
     <p>Connect with us:</p>
@@ -205,8 +200,3 @@ footer .social:hover {
   </footer>
 </body>
 </html>
-
-
-
-
-
