Refactor HTML structure and styles in index.html
Updated header styles and fixed HTML structure.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     background-color: #d10000; /* strong red */
     color: #ffffff; /* white text */
     padding: 30px 20px;
-    text-align: center;
-    font-size: 32px;
+    text-align:center;
+    font-family: 'georgia',serif;
+    font-size: 72px;
     font-weight: bold;
     letter-spacing: 1px;
   }
@@ -180,4 +181,5 @@ footer .social:hover {
   </footer>
 </body>
 </html>
+
 
