--- a/index.html
+++ b/index.html
@@ -1,115 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vers. Store</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-<style>
-  body {
-    margin: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #ffffff; /* white background */
-    color: #222; /* default text color */
-  }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vers. | Red & White</title>
+    <style>
+        /* Modern Reset */
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+            background-color: #ffffff; /* White background */
+            color: #333333;
+        }
 
-  header {
-    background-color: #d10000; /* strong red */
-    color: #ffffff; /* white text */
-    padding: 30px 20px;
-    text-align:center;
-    font-family: 'georgia',serif;
-    font-size: 72px;
-    font-weight: bold;
-    letter-spacing: 1px;
-  }
+        /* Bold Red Header */
+        header {
+            background-color: #D10000; /* Rich Brand Red */
+            color: #ffffff;            /* White text */
+            padding: 80px 20px;
+            text-align: center;
+            border-bottom: 10px solid #a80000;
+        }
 
-  .subheading {
-    font-size: 18px;
-    margin-top: 5px;
-    color: #ffcccc;
-  }
-  
-  nav {
-    background-color: #d10000; /* red nav bar */
-    display: flex;
-    justify-content: center;
-    gap: 40px;
-    padding: 15px 0;
-  }
+        header h1 {
+            margin: 0;
+            font-family: 'Georgia', serif; /* Elegant font model */
+            font-size: 90px;
+            font-weight: bold;
+            letter-spacing: 5px;
+            text-transform: uppercase;
+        }
 
-  nav a {
-    color: white;
-    text-decoration: none;
-    font-size: 18px;
-    font-weight: 500;
-    transition: all 0.3s ease;
-  }
+        header p {
+            font-size: 22px;
+            margin-top: 15px;
+            font-weight: 300;
+            letter-spacing: 2px;
+            font-style: italic;
+        }
 
-  nav a:hover {
-    text-decoration: underline;
-    opacity: 0.8;
-  }
+        /* Content Area */
+        .main-content {
+            text-align: center;
+            padding: 60px 20px;
+        }
 
-  .main-banner {
-    text-align: center;
-    padding: 50px 20px;
-    background-color: #f9f9f9;
-    font-size: 24px;
-    color: #444;
-  }
+        .main-content h2 {
+            color: #D10000; /* Red Heading */
+            font-size: 32px;
+            margin-bottom: 20px;
+        }
 
-  .product {
-    text-align: center;
-    margin: 40px;
-  }
+        /* Red Contact Button Style */
+        .contact-box {
+            display: inline-block;
+            background-color: #D10000;
+            color: white;
+            padding: 15px 30px;
+            border-radius: 50px;
+            font-weight: bold;
+            margin-top: 20px;
+            text-decoration: none;
+            transition: 0.3s;
+        }
 
-  .product img {
-    width: 300px;
-    border-radius: 12px;
-  }
+        .contact-box:hover {
+            background-color: #333333; /* Turns dark on hover */
+        }
 
-  .product-name {
-    font-size: 20px;
-    margin-top: 10px;
-    color: #d10000; /* red product title */
-  }
-
-  footer {
-    text-align: center;
-    padding: 20px;
-    background-color: #f0f0f0;
-    color: #555;
-  }
-
-  footer {
-  background-color: #d10000; /* red background */
-  color: white;
-  text-align: center;
-  padding: 20px 0;
-  font-size: 16px;
-}
-
-footer .social {
-  color: white;
-  text-decoration: none;
-  margin: 0 10px;
-  font-weight: bold;
-  font-size: 18px;
-}
-
-footer .social:hover {
-  text-decoration: underline;
-  color: #ffcccc; /* lighter red on hover */
-}
-</style>
+        footer {
+            margin-top: 100px;
+            padding-bottom: 40px;
+            text-align: center;
+            font-size: 12px;
+            color: #999;
+            text-transform: uppercase;
+        }
+    </style>
 </head>
-<body>
-  <header>
-    <h1>Vers.</h1>
-    <p>make your style from vers.</p>
-    <p class="subheading">contact us: +91 9497713316</p>
-  </header>
   <nav>
     <a href="#">Home</a>
     <a href="#">Shop</a>
@@ -181,6 +150,7 @@ footer .social:hover {
   </footer>
 </body>
 </html>
+
 
 
 
