Implement responsive design for mobile view
Added responsive design for mobile devices, adjusting header and paragraph sizes.

--- a/index.html
+++ b/index.html
@@ -102,6 +102,17 @@ footer .social:hover {
   text-decoration: underline;
   color: #ffcccc; /* lighter red on hover */
 }
+
+  @media screen and (max-width: 600px) {
+  header h1 {
+    font-size: 40px; /* Reduces the size of "Vers." on mobile */
+  }
+
+  header p {
+    font-size: 18px; /* Makes "make your style from vers." fit on one line */
+    padding: 0 10px;
+  }
+}
 </style>
 </head>
 <body>
@@ -181,6 +192,7 @@ footer .social:hover {
   </footer>
 </body>
 </html>
+
 
 
 
