--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -192,6 +192,7 @@ footer .social:hover {
   </footer>
 </body>
 </html>
+
 
 
 
