--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ footer .social:hover {
   <header>
     <h1>Vers.</h1>
     <p>make your style from vers.</p>
-    <p class="subheading"a href="https://wa.me/919497713316" target="_blank"</p>
+    <p>"https://wa.me/919497713316" target="_blank"</p>
   </header>
   <nav>
     <a href="#">Home</a>
@@ -186,6 +186,7 @@ footer .social:hover {
   </footer>
 </body>
 </html>
+
 
 
 
