Refactor index.html and add contact information
Updated the HTML structure and added a contact section with Instagram link.

--- a/index.html
+++ b/index.html
@@ -119,7 +119,10 @@ footer .social:hover {
   <header>
     <h1>Vers.</h1>
     <p>make your style from vers.</p>
-    <p>"https://wa.me/919497713316" target="_blank"</p>
+    <p class="subheading">contact us:</p>
+     <a href="https://instagram.com/vers.shoestore" target="_blank">
+      <i class="fab fa-instagram"></i> Instagram
+    </a>
   </header>
   <nav>
     <a href="#">Home</a>
@@ -186,6 +189,7 @@ footer .social:hover {
   </footer>
 </body>
 </html>
+
 
 
 
