Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ footer .social:hover {
   <header>
     <h1>Vers.</h1>
     <p>make your style from vers.</p>
-    <p class="subheading">contact us:</p>
+    <p>contact us:</p>
      <a href="https://instagram.com/vers.shoestore" target="_blank">
       <i class="fab fa-instagram"></i> Instagram
     </a>
@@ -189,6 +189,7 @@ footer .social:hover {
   </footer>
 </body>
 </html>
+
 
 
 
