Refactor index.html structure and styles

--- a/index.html
+++ b/index.html
@@ -113,6 +113,18 @@ footer .social:hover {
     padding: 0 10px;
   }
 }
+
+.instagram-link {
+    font-size: 16px;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    gap: 8px; 
+}
+
+.instagram-link i {
+    font-size: 20px; 
+}
 </style>
 </head>
 <body>
@@ -189,6 +201,7 @@ footer .social:hover {
   </footer>
 </body>
 </html>
+
 
 
 
