Fix HTML structure and improve formatting

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ footer .social:hover {
     <p>make your style from vers.</p>
   </header>
   <nav>
-    <a href="#">Contact</a>
+    <a href="#">Contact us;</a>
      <a href="https://instagram.com/vers.shoestore" target="_blank">
       <i class="fab fa-instagram"></i> Instagram
     </a> 
@@ -197,6 +197,7 @@ footer .social:hover {
   </footer>
 </body>
 </html>
+
 
 
 
