--- a/index.html
+++ b/index.html
@@ -210,6 +210,16 @@ footer .social:hover {
     <h3>tiger</h3>
     <p>₹2,690</p>
   </div>
+   <script>
+function toggleDetails(id) {
+  var panel = document.getElementById(id);
+  if (panel.style.display === "block") {
+    panel.style.display = "none";
+  } else {
+    panel.style.display = "block";
+  }
+}
+</script> 
 </section>
     </div>
   </section>
@@ -225,6 +235,7 @@ footer .social:hover {
   </footer>
 </body>
 </html>
+
 
 
 
