--- a/index.html
+++ b/index.html
@@ -210,6 +210,11 @@ footer .social:hover {
     <h3>tiger</h3>
     <p>₹2,690</p>
   </div>
+     <div class="product">
+    <img src="css image/nike dunk (red)" alt="NIKE DUNK" width="250">
+    <h3>NIKE DUNK</h3>
+    <p>₹2,699</p>
+  </div>
    <script>
 function toggleDetails(id) {
   var panel = document.getElementById(id);
@@ -235,6 +240,7 @@ function toggleDetails(id) {
   </footer>
 </body>
 </html>
+
 
 
 
