--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ footer .social:hover {
     <p>₹2,690</p>
   </div>
      <div class="product">
-    <img src="css image/https://github.com/vers363/vers/blob/main/css%20image/nike%20dunk%20(red).webp" alt="NIKE DUNK" width="250">
+    <img src="css image/nike dunk (red).webp" alt="NIKE DUNK" width="250">
     <h3>NIKE DUNK</h3>
     <p>₹2,699</p>
   </div>
@@ -240,6 +240,7 @@ function toggleDetails(id) {
   </footer>
 </body>
 </html>
+
 
 
 
