Fix HTML formatting and update product details

--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@ footer .social:hover {
      <div class="product">
   <img src="css image/nike dunk (red).webp" alt="nike dunk" width="250" onclick="toggleDetails('info-nikedunk')" style="cursor:pointer;">
   <h3>NIKE DUNK LOW RETRO SP</h3>
-  <p>₹2,999</p>
+  <p>including tax 
+    MRP:₹2,999</p>
   
   <div id="NIKE DUNK" class="details-panel">
     <strong>Sizes:</strong> 7, 8, 9, 10 <br>
@@ -246,6 +247,7 @@ function toggleDetails(id) {
   </footer>
 </body>
 </html>
+
 
 
 
