--- a/index.html
+++ b/index.html
@@ -40,6 +40,62 @@
     letter-spacing: 1px;
   }
 
+  .product-card {
+  width: 300px;
+  border: 1px solid #eee;
+  border-radius: 12px;
+  padding: 15px;
+  font-family: sans-serif;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.05);
+}
+
+.product-image img {
+  width: 100%;
+  border-radius: 8px;
+}
+
+.brand { color: #888; font-size: 14px; text-transform: uppercase; margin: 10px 0 0; }
+.product-name { font-size: 18px; margin: 5px 0; }
+.price { font-weight: bold; color: #222; }
+
+.selection-group { margin: 15px 0; }
+.selection-group label { display: block; font-size: 12px; margin-bottom: 5px; color: #666; }
+
+/* Size Buttons */
+.size-options { display: flex; gap: 8px; }
+.size-btn {
+  border: 1px solid #ddd;
+  background: white;
+  padding: 5px 10px;
+  cursor: pointer;
+  border-radius: 4px;
+}
+.size-btn.active { background: #000; color: #fff; border-color: #000; }
+
+/* Color Swatches */
+.color-options { display: flex; gap: 10px; }
+.color-swatch {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 1px solid #ddd;
+  cursor: pointer;
+}
+.color-swatch.white { background: #fff; }
+.color-swatch.grey { background: #ccc; }
+.color-swatch.black { background: #000; }
+.color-swatch.active { outline: 2px solid #000; outline-offset: 2px; }
+
+.add-to-cart {
+  width: 100%;
+  padding: 10px;
+  background: #000;
+  color: #fff;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  margin-top: 10px;
+}
   .subheading {
     font-size: 18px;
     margin-top: 5px;
@@ -193,11 +249,38 @@ footer .social:hover {
     <p>₹2,700</p>
   </div>
   
-  <div class="product">
-    <img src="css image/ne-balance-346.jpg" alt="new-balance" width="250">
-    <h3>new balance</h3>
-    <p>₹3000</p>
+  <div class="product-card">
+  <div class="product-image">
+    <img src="css image/new-balance.jpg" alt="Shoe Name">
   </div>
+
+  <div class="product-info">
+    <h3 class="brand">New Balance</h3>
+    <h2 class="product-name">550 White Grey</h2>
+    <p class="price">$110.00</p>
+
+    <div class="selection-group">
+      <label>Size</label>
+      <div class="size-options">
+        <button class="size-btn">7</button>
+        <button class="size-btn">8</button>
+        <button class="size-btn active">9</button>
+        <button class="size-btn">10</button>
+      </div>
+    </div>
+
+    <div class="selection-group">
+      <label>Color: <span id="color-name">White</span></label>
+      <div class="color-options">
+        <span class="color-swatch white active"></span>
+        <span class="color-swatch grey"></span>
+        <span class="color-swatch black"></span>
+      </div>
+    </div>
+
+    <button class="add-to-cart">Add to Cart</button>
+  </div>
+</div>
 
   <div class="product">
     <img src="css image/puma-blue-349.jpg" alt="puma" width="250">
@@ -247,6 +330,7 @@ function toggleDetails(id) {
   </footer>
 </body>
 </html>
+
 
 
 
