--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ footer .social:hover {
 
   <div class="product-card">
     <div class="image-container">
-      <img src="new-balance-white.jpg" alt="New Balance">
+      <img src="new-balance-346.jpg" alt="New Balance">
     </div>
     <div class="product-details">
       <h3>New Balance</h3>
@@ -349,7 +349,7 @@ footer .social:hover {
   
   <div class="product-card">
   <div class="product-image">
-    <img src="css image/new-balance.jpg" alt="Shoe Name">
+    <img src="css image/new-balance-346.jpg" alt="Shoe Name">
   </div>
 
   <div class="product-info">
@@ -428,6 +428,7 @@ function toggleDetails(id) {
   </footer>
 </body>
 </html>
+
 
 
 
