--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ footer .social:hover {
 
   <div class="product-card">
     <div class="image-container">
-      <img src="css image/new-balance-346.jpg" alt="New Balance">
+      <img src="css image/ne-balance-346.jpg" alt="New Balance">
     </div>
     <div class="product-details">
       <h3>New Balance</h3>
@@ -479,6 +479,7 @@ function toggleDetails(id) {
   </footer>
 </body>
 </html>
+
 
 
 
