--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@ footer .social:hover {
 
   <div class="product-card">
     <div class="image-container">
-      <img src="css image/nike dunk )red).webp" alt="nike dunk">
+      <img src="css image/nike dunk (red).webp" alt="nike dunk">
     </div>
     <div class="product-details">
       <h3>NIKE DUNK</h3>
@@ -540,6 +540,7 @@ function toggleDetails(id) {
   </footer>
 </body>
 </html>
+
 
 
 
