--- a/index.html
+++ b/index.html
@@ -104,20 +104,20 @@ h3 { margin: 15px 0 5px; text-transform: capitalize; }
     right: -300px;
     top: 0;
     width: 300px;
-    height: 100%;
+    height: 90vh; 
     background: white;
     box-shadow: -2px 0 5px rgba(0,0,0,0.5);
     transition: 0.3s;
     z-index: 1000;
     padding: 20px;
     display: flex;
-    flex-direction: column; /* This stacks items vertically */
+    flex-direction: column; 
     color: black;
 }
 
 #cart-items {
-    flex-grow: 1;      /* This takes up all available space */
-    overflow-y: auto;  /* This adds a scrollbar if you have many items */
+    flex-grow: 1;   
+    overflow-y: auto; 
     margin-bottom: 20px;
 }
 
@@ -612,6 +612,7 @@ window.location.href = "https://ig.me/m/vers.shoestore?text=" + msg;
   </footer>
 </body>
 </html>
+
 
 
 
