--- a/index.html
+++ b/index.html
@@ -606,12 +606,13 @@ function updateCartUI() {
 
 function sendToInstagram() {
    const msg = encodeURIComponent("I want to buy: " + cart.map(i => i.name).join(", "));
-window.location.href = "https://ig.me/m/vers.shoestore?text=" + msg;
+window.location.href = "https://instagram.com/vers.shoestore?text=" + msg;
 }
 </script>
   </footer>
 </body>
 </html>
+
 
 
 
