--- a/index.html
+++ b/index.html
@@ -323,28 +323,38 @@ footer .social:hover {
   <h2>Our Shoes</h2>
 
     <div class="product-grid">
-
-  <div class="product-card">
-    <div class="image-container">
-      <img src="air-force-1.jpg" alt="AIR force">
-    </div>
-    <div class="product-details">
-      <h3>AIR force</h3>
-      <p class="price">₹2,199</p>
-      
-      <div class="variant-section">
-        <p><strong>Sizes:</strong> 7, 8, 9, 10</p>
-        <div class="color-row">
-          <strong>Colors:</strong> 
-          <span class="color-circle white"></span> White
-        </div>
-      </div>
-      
-     <button onclick="addToCart('Air Force 1', 3000, 'https://your-site.vercel.app/images/airforce-1.jpg')">
-    Add to Cart
-</button>
-    </div>
+      <div class="product-card">
+  <div class="product-image">
+    <img src="your-shoe-image.jpg" alt="Shoe Name">
   </div>
+
+  <div class="product-info">
+    <h3 class="brand">New Balance</h3>
+    <h2 class="product-name">550 White Grey</h2>
+    <p class="price">$110.00</p>
+
+    <div class="selection-group">
+      <label>Size</label>
+      <div class="size-options">
+        <button class="size-btn">7</button>
+        <button class="size-btn">8</button>
+        <button class="size-btn active">9</button>
+        <button class="size-btn">10</button>
+      </div>
+    </div>
+
+    <div class="selection-group">
+      <label>Color: <span id="color-name">White</span></label>
+      <div class="color-options">
+        <span class="color-swatch white active"></span>
+        <span class="color-swatch grey"></span>
+        <span class="color-swatch black"></span>
+      </div>
+    </div>
+
+    <button class="add-to-cart">Add to Cart</button>
+  </div>
+</div>
 
   <div class="product-card">
     <div class="image-container">
@@ -622,6 +632,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
