--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ footer .social:hover {
     <div class="product-grid">
       <div class="product-card">
   <div class="product-image">
-    <img src="your-shoe-image.jpg" alt="Shoe Name">
+    <img src="air-force-1.jpg" alt="air force">
   </div>
 
   <div class="product-info">
@@ -632,6 +632,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
