--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ footer .social:hover {
     <h2>Your Cart</h2>
     <div id="cart-items" style="flex-grow: 1;"></div>
     <button onclick="sendTowhatsApp()" style="background: #e1306c; color: white; width: 100%; padding: 10px;">
-        Buy Now (on Whatsapp)
+        Buy Now (on whatsapp)
     </button>
 </div>
   </nav>
@@ -331,14 +331,16 @@ footer .social:hover {
       <h3>AIR force</h3>
       <p class="price">₹2,199</p>
       
-      <div class="variant-section">
-        <p><strong>Sizes:</strong> 7, 8, 9, 10</p>
-        <div class="color-row">
-          <strong>Colors:</strong> 
-          <span class="color-circle white"></span> White
-        </div>
-      </div>
-      
+<div class="variant-section">
+    <p><strong>Select Size:</strong></p>
+    <select id="size-dropdown" style="padding: 5px; width: 100%; margin-bottom: 10px;">
+        <option value="7">7</option>
+        <option value="8">8</option>
+        <option value="9">9</option>
+        <option value="10">10</option>
+    </select>
+</div>
+      <button class="add-to-cart">Add to Cart</button>
      <button onclick="addToCart('Air Force 1', 3000, 'https://your-site.vercel.app/images/air-force-1.jpg')"> 
     </div>
   </div>
@@ -625,6 +627,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
