--- a/index.html
+++ b/index.html
@@ -340,8 +340,7 @@ footer .social:hover {
         <option value="10">10</option>
     </select>
 </div>
-      <button class="add-to-cart">Add to Cart</button>
-     <button onclick="addToCart('Air Force 1', 3000, 'https://your-site.vercel.app/images/air-force-1.jpg')"> 
+     <button onclick="addToCart('Air Force 1', 3000, 'https://your-site.vercel.app/images/air-force-1.jpg')"> </button>
     </div>
   </div>
 
@@ -627,6 +626,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
