--- a/index.html
+++ b/index.html
@@ -314,9 +314,9 @@ footer .social:hover {
     <button onclick="toggleCart()">Close</button>
     <h2>Your Cart</h2>
     <div id="cart-items" style="flex-grow: 1;"></div>
-    <button onclick="sendToWhAtsApp()" style="background: #e1306c; color: white; width: 100%; padding: 10px;">
-        Buy Now (on WhatsApp)
-    </button>
+    <button onclick="sendToWhatsApp()" style="background: #e1306c; color: white; width: 100%; padding: 10px;">
+    Buy Now (on WhatsApp)
+</button>
 </div>
   </nav>
   <section class="products">
@@ -628,6 +628,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
