--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ footer .social:hover {
 
   <div class="product-card">
     <div class="image-container">
-      <img src="new-balance-white.jpg" alt="New Balance">
+      <img src="css image/new-balance-white.jpg" alt="New Balance">
     </div>
     <div class="product-details">
       <h3>New Balance</h3>
@@ -628,6 +628,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
