--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ footer .social:hover {
         <option value="10">10</option>
     </select>
 </div>
-    <button class="add-to-cart-btn" onclick="addToCart('AIR Force', 2199, 'https://vers-virid.vercel.app/images/air-force-1.jpg')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
+    <button class="add-to-cart-btn" onclick="addToCart('AIR Force', 2199, 'https://vers-virid.vercel.app/air-force-1.jpg')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
     Add to Cart
 </button>
     </div>
@@ -628,6 +628,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
