--- a/index.html
+++ b/index.html
@@ -355,14 +355,15 @@ footer .social:hover {
       <p class="price">₹3,000</p>
       
       <div class="variant-section">
-        <p><strong>Sizes:</strong> 6, 7, 8, 9, 10</p>
-        <div class="color-row">
-          <strong>Colors:</strong> 
-          <span class="color-circle grey"></span> Grey/White
-        </div>
-      </div>
+    <p><strong>Select Size:</strong></p>
+    <select id="size-dropdown" style="padding: 5px; width: 100%; margin-bottom: 10px;">
+        <option value="7">7</option>
+        <option value="8">8</option>
+        <option value="9">9</option>
+        <option value="10">10</option>
+    </select>
       
-      <button class="add-to-cart">Add to Cart</button>
+      <button class="add-to-cart-btn" onclick="addToCart('AIR Force', 2199, 'https://vers-virid.vercel.app/css image/new-balance-white.jpg')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
     </div>
   </div>
 
@@ -628,6 +629,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
