--- a/index.html
+++ b/index.html
@@ -364,7 +364,8 @@ footer .social:hover {
     </select>
       
       <button class="add-to-cart-btn" onclick="addToCart('AIR Force', 2199, 'https://vers-virid.vercel.app/css image/new-balance-white.jpg')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
-    </div>
+   add to cart
+      </div>
   </div>
 
   </div>
@@ -629,6 +630,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
