--- a/index.html
+++ b/index.html
@@ -363,13 +363,9 @@ footer .social:hover {
         <option value="10">10</option>
     </select>
       
-      <button class="add-to-cart-btn" onclick="addToCart('AIR Force', 2199, 'https://vers-virid.vercel.app/css image/new-balance-white.jpg')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
+      <button class="add-to-cart-btn" onclick="addToCart('NEW BALANCE', 3000, 'https://vers-virid.vercel.app/css image/new-balance-white.jpg')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
    add to cart
       </div>
-  </div>
-
-  </div>
-
   </div>
 
 <div class="product-grid">
@@ -391,7 +387,7 @@ footer .social:hover {
         <option value="10">10</option>
     </select>
          
-     <button class="add-to-cart-btn" onclick="addToCart('AIR Force', 2199, 'https://vers-virid.vercel.app/css image/joordan-blue.jpg')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
+     <button class="add-to-cart-btn" onclick="addToCart('NIKE JORDAN', 2799, 'https://vers-virid.vercel.app/css image/joordan-blue.jpg')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
    ADD TO CART
     </div>
   </div>
@@ -627,6 +623,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
