--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
   <title>Vers. Store</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <style>
+  .product-grid {
+    display: flex;      
+    flex-wrap: wrap;     
+    gap: 20px;          
+    justify-content: center; 
+}
+
+.product-card {
+    flex: 1 1 300px;    
+    max-width: 350px;  
+    box-sizing: border-box; 
+}
   body {
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -623,6 +635,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
