--- a/index.html
+++ b/index.html
@@ -408,10 +408,10 @@ footer .social:hover {
 
   <div class="product-card">
     <div class="image-container">
-      <img src="css image/new-balance-white.jpg" alt="New Balance">
+      <img src="css image/jordan-gold.jpg" alt="nike jordan">
     </div>
     <div class="product-details">
-      <h3>New Balance</h3>
+      <h3>NIKE JORDAN</h3>
       <p class="price">₹3,000</p>
       
         <div class="variant-section">
@@ -424,7 +424,7 @@ footer .social:hover {
     </select>
         </div>
           
-       <button class="add-to-cart-btn" onclick="addToCart('NEW BALANCE', 3,000, 'https://vers-virid.vercel.app/css image/new-balance-white.jpg')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
+       <button class="add-to-cart-btn" onclick="addToCart('NIKE JORDAN', 3,000, 'https://vers-virid.vercel.app/css image/jordan-gold.jpg')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
    ADD TO CART    
     </div>
   </div>
@@ -651,6 +651,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
