--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@ footer .social:hover {
 
   <div class="product-card">
     <div class="image-container">
-      <img src="css image/nike dunk (red).webp" alt="nike dunk">
+      <img src="css image/nike dunk(green).webp" alt="nike dunk">
     </div>
     <div class="product-details">
       <h3>NIKE DUNK</h3>
@@ -472,7 +472,7 @@ footer .social:hover {
     </select>
        </div>
       
-     <button class="add-to-cart-btn" onclick="addToCart('nike dunk', 34656, 'https://vers-virid.vercel.app/css image/nike dunk (red).webp')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
+     <button class="add-to-cart-btn" onclick="addToCart('nike dunk', 34656, 'https://vers-virid.vercel.app/css image/nike dunk(green).webp')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
    ADD TO CART
     </div>
   </div>
@@ -480,7 +480,7 @@ footer .social:hover {
 
   <div class="product-card">
     <div class="image-container">
-      <img src="css image/nike dunk(green).webp" alt="nike dunk">
+      <img src="css image/nike dunk (red).webp" alt="nike dunk">
     </div>
     <div class="product-details">
       <h3>NIKE DUNK/h3>
@@ -496,7 +496,7 @@ footer .social:hover {
     </select>
        </div>
       
-<button class="add-to-cart-btn" onclick="addToCart('NIKE DUNKE', 3,000, 'https://vers-virid.vercel.app/css image/nike dunk(green).jpg')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
+<button class="add-to-cart-btn" onclick="addToCart('NIKE DUNKE', 3,000, 'https://vers-virid.vercel.app/css image/nike dunk (red).jpg')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
    ADD TO CART
     </div>
   </div>
@@ -651,6 +651,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
