--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@ footer .social:hover {
       <img src="css image/nike dunk (red).webp" alt="nike dunk">
     </div>
     <div class="product-details">
-      <h3>NIKE DUNK/h3>
+      <h3>NIKE DUNK</h3>
       <p class="price">₹2,799</p>
       
        <div class="variant-section">
@@ -651,6 +651,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
