--- a/index.html
+++ b/index.html
@@ -570,7 +570,9 @@ footer .social:hover {
          <button class="add-to-cart-btn" onclick="addToCart('puma suede', 3,000, 'https://vers-virid.vercel.app/css image/pume-blue.jpg')" style="width: 100%; padding: 10px; background: black; color: white; cursor: pointer;">
    ADD TO CART  
     </div>
-  </div><div class="product-grid">
+  </div>
+    
+    <div class="product-grid">
 
   <div class="product-card">
     <div class="image-container">
@@ -651,6 +653,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
