--- a/index.html
+++ b/index.html
@@ -578,10 +578,10 @@ footer .social:hover {
 
   <div class="product-card">
     <div class="image-container">
-      <img src="css image/AIR jordan 1 low.avif" alt="AIR JORDAN<BR>LOW BLACK">
+      <img src="css image/AIR jordan 1 low.avif" alt="AIR JORDAN LOW BLACK">
     </div>
     <div class="product-details">
-      <h3>AIR force</h3>
+      <h3>AIR JORDAN<BR>LOW BLACK</h3>
       <p class="price">₹2,199</p>
       
 <div class="variant-section">
@@ -602,7 +602,7 @@ footer .social:hover {
 
   <div class="product-card">
     <div class="image-container">
-      <img src="css image/air jordan 1 retro low.avif" alt="AIR JORDAN<BR>RETRO LOW">
+      <img src="css image/air jordan 1 retro low.avif" alt="AIR JORDAN RETRO LOW">
     </div>
     <div class="product-details">
       <h3>AIR JORDAN<BR>RED RETRO LOW</h3>
@@ -681,6 +681,7 @@ function sendToWhatsApp() {
   </footer>
 </body>
 </html>
+
 
 
 
